--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,23 @@
-/* 风格属性 */
+/* 样式属性 */
 
+/* 全局body样式 */
 body {
     margin: 0;
     overflow: hidden;
     background-color: #C2FFE0;
     height: 100vh;
 }
-
+.showTime {
+    /* position: absolute; */
+    /* top: 0; */
+    align-self: center;
+    right: 1rem;
+    bottom: 1px;
+    line-height: 0.9375rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: rgba(255, 255, 255, 0.7);
+}
 /* 弹性盒子模型 */
 .flex{
     display: flex;
@@ -16,8 +27,8 @@ body {
     flex: 1;  
 }
 
-
 /* 盒子样式 */
+/* 1.顶部 */
 #div_top {
     flex-direction: row;
     height: 100px;
@@ -25,39 +36,49 @@ body {
     border-bottom-color: rgba(100, 100, 100, .5);
     border-bottom-width: 1.5px;
     border-bottom-style: solid;
+    border-radius: 2px;
     box-shadow: 2px 1px 30px rgba(0, 0, 0, .3);
     padding-left: 25px;
     align-items: center;
 }
-
+#ptitle {
+    font-family: STZhongsong, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    
+}
+p {
+    display: inline;
+}
+/* 2.内容 */
 #div_content{
     background-color: #DBEDFF;
 }
-
+/* 2.1显示区 */
 #div_display{
     flex-direction: column;
     width: 1300px;
-    border: 1.5px solid rgba(255, 255, 255, 0.8);
+    border: 3px solid rgba(92, 160, 255, 0.8);
+    border-radius: 5px;
 }
-
+/* 2.1.1模型 */
 #div_model{
     background-color: #EDD4DC;
     height: 600px; 
     margin: 10px;
     margin-bottom: 2px;
     border-radius: 5px;
-    border: 1.5px solid rgba(208, 200, 211, 0.8);
+    border: 3px solid rgba(208, 200, 211, 0.8);
     padding: 10px;
 }
-
+/* 2.1.2检测 */
 #div_detect{
     background-color: #85E0FF;
     margin: 10px;
     border-radius: 5px;
-    border: 1.5px solid rgba(208, 200, 211, 0.8);
+    border: 3px solid rgba(208, 200, 211, 0.8);
 
 }
-
 #detect_title{
     flex-direction: column;
     height: 100%;
@@ -65,29 +86,25 @@ body {
     background-color: #00BFFF;
     justify-content: space-around;
 }
-
 table {
     /* border: 1px solid; */
     position: absolute;
     /* margin-left:35%; */
     /* margin-left: 90px; */
-    width: 1046px;
+    width: 1052px;
     
 }
-
 thead th {
     text-align: center;
     /* border: 1px solid; */
     background-color: #97bfff;
 }
-
 tbody tr:nth-child(even) {
     /* border-collapse: collapse; */
     text-align: center;
     /* border: 1px solid; */
     background-color: #c2e9fb;
 }
-
 tbody tr:nth-child(odd) {
     /* border-collapse: collapse; */
     text-align: center;
@@ -95,75 +112,13 @@ tbody tr:nth-child(odd) {
     background-color: #aadced;
 }
 
+/* 2.2控制区 */
 #div_control{
     background-color: #C2E0FF;
-    margin: 10px;
+    margin: 3px;
     border-radius: 5px;
-    border: 1.5px solid rgba(255, 255, 255, 0.8);
+    border: 3px solid rgba(92, 160, 255, 0.8);
     flex-direction: column;
-}
-
-.cmn-toggle {
-    position: absolute;
-    margin-left: -9999px;
-    visibility: hidden;
-  }
-.cmn-toggle + label {
-    display: flex;
-    position: relative;
-    cursor: pointer;
-    outline: none;
-    user-select: none;
-}
-
-input.cmn-toggle-round-flat + label {
-    padding: 2px;
-    width: 60px;
-    height: 30px;
-    background-color: #dddddd;
-    border-radius: 30px;
-    transition: background 0.4s;
-  }
-  input.cmn-toggle-round-flat + label:before,
-  input.cmn-toggle-round-flat + label:after {
-    display: block;
-    position: absolute;
-    content: "";
-  }
-  input.cmn-toggle-round-flat + label:before {
-    top: 2px;
-    left: 2px;
-    bottom: 2px;
-    right: 2px;
-    background-color: #fff;
-    border-radius: 30px;
-    transition: background 0.4s;
-  }
-  input.cmn-toggle-round-flat + label:after {
-    top: 4px;
-    left: 4px;
-    bottom: 4px;
-    width: 26px;
-    background-color: #dddddd;
-    border-radius: 26px;
-    transition: margin 0.4s, background 0.4s;
-  }
-  input.cmn-toggle-round-flat:checked + label {
-    background-color: #8ce196;
-  }
-  input.cmn-toggle-round-flat:checked + label:after {
-    margin-left: 30px;
-    background-color: #8ce196;
-  }
-
-
-p {
-    display: inline;
-}
-
-#ptitle {
-    font-family: "华文新魏";
-    font-size: 30px;
 }
 
 #control_title{
@@ -181,31 +136,102 @@ p {
     margin: 10px;
     margin-top: 15px;
 }
-
+.gpio_block{
+    height: 100px;
+    width: 100px;
+    border-radius: 10%;
+    margin: 5px;
+    flex-direction: column;
+    justify-content: center;
+}
 #div_pwm{
     flex-wrap: wrap;  /* 均匀分布，不挤成一行 */
     justify-content: space-evenly;  /* 等间距分布 */
     align-content: flex-start;  /* 中间不换行 */
     margin: 10px;
+    margin-top: 30px;
 }
-
-.gpio_block{
-    height: 100px;
+.pwm_block{
+    height: 110px;
     width: 100px;
     border-radius: 10%;
-    background-color: #C2FFE0;
-    margin: 5px;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.pwm_block{
-    height: 130px;
-    width: 130px;
-    border-radius: 10%;
-    background-color: #02FFFF;
     margin: 10px;
     
+}
+
+.fan_bg{
+    background-color: #EDD4DC;
+}
+.stone_bg{
+    background-color: #97bfff;
+}
+.pump_bg{
+    background-color: #A0E692;
+}
+.plate_bg{
+    background-color: #02FFFF;
+}
+
+button{
+    border-radius: 15%;
+    border: 1px solid #061d2b;
+}
+#Reset{
+    border-radius: 15%;
+    border: 1px solid #061d2b;
+}
+
+
+/* 3.组件样式 */
+.cmn-toggle {
+    position: absolute;
+    visibility: hidden;
+  }
+.cmn-toggle + label {
+    display: flex;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    user-select: none;
+}
+input.cmn-toggle-round-flat + label {
+    padding: 2px;
+    width: 60px;
+    height: 30px;
+    background-color: #dddddd;
+    border-radius: 30px;
+    transition: background 0.4s;
+}
+input.cmn-toggle-round-flat + label:before,
+input.cmn-toggle-round-flat + label:after {
+display: block;
+position: absolute;
+content: "";
+}
+input.cmn-toggle-round-flat + label:before {
+top: 2px;
+left: 2px;
+bottom: 2px;
+right: 2px;
+background-color: #fff;
+border-radius: 30px;
+transition: background 0.4s;
+}
+input.cmn-toggle-round-flat + label:after {
+top: 4px;
+left: 4px;
+bottom: 4px;
+width: 26px;
+background-color: #dddddd;
+border-radius: 26px;
+transition: margin 0.4s, background 0.4s;
+}
+input.cmn-toggle-round-flat:checked + label {
+background-color: #8ce196;
+}
+input.cmn-toggle-round-flat:checked + label:after {
+margin-left: 30px;
+background-color: #8ce196;
 }
 
 
@@ -222,35 +248,6 @@ p {
     cursor: pointer;
 }
 
-.subbuttons{
-    display: none;
-    background-color: #00fae5;
-    position: absolute;
-    cursor: pointer;
-    width: 65px;
-    height: 80px;
-    font-size: 20px;
-}
-
-.rankbuttons{
-    display: none;
-    background-color: #00fae5;
-    position: absolute;
-    cursor: pointer;
-    width: 43.3px;
-    height: 80px;
-    font-size: 20px;
-}
-
-.targetbuttons{
-    display: none;
-    background-color: #00fae5;
-    position: absolute;
-    cursor: pointer;
-    width: 30px;
-    height: 50px;
-    font-size: 8px;
-}
 
 .buttons:hover {
     background-color: #00BFFF;
